feat: enhance language switcher and add scroll to top functionality in navigation

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -14,7 +14,8 @@
         "close": "Close table of contents",
         "instruction": "Select a section to scroll to that area",
         "current": "Current",
-        "aria": "Table of contents navigation"
+        "aria": "Table of contents navigation",
+        "scrollToTop": "Scroll to top of page"
     },
     "sections": {
         "profile": "Profile",
