--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -6,7 +6,9 @@
     },
     "common": {
         "resume": "Resume",
-        "toggleTheme": "Toggle theme"
+        "toggleTheme": "Toggle theme",
+        "underConstruction": "This resume is a sample",
+        "draft": "DRAFT"
     },
     "navigation": {
         "toc": "Table of Contents",
