feat: add main job and side project labels to work history section for clarity

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -35,7 +35,9 @@
   },
   "workHistory": {
     "responsibilities": "Responsibilities",
-    "projects": "Projects"
+    "projects": "Projects",
+    "mainJob": "Full-time",
+    "sideProject": "Side Projects"
   },
   "project": {
     "responsibilities": "Responsibilities",
