feat: update job titles in English and Japanese for clarity

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -36,8 +36,8 @@
   "workHistory": {
     "responsibilities": "Responsibilities",
     "projects": "Projects",
-    "mainJob": "Full-time",
-    "sideProject": "Side Projects"
+    "mainJob": "Full-time Employee",
+    "sideProject": "Contract Work"
   },
   "project": {
     "responsibilities": "Responsibilities",
